syntax = "proto3";

package prime;
option go_package="prime/primepb";

message PrimeRequest{
  int64 num = 1;
}

message PrimeResponse{
  int64 result = 1;
}

service PrimeService{
  rpc PrimeNumber(PrimeRequest) returns (stream PrimeResponse){};
}